--- a/Practica Motores/Engine/vs-2017/Engine.vcxproj.filters
+++ b/Practica Motores/Engine/vs-2017/Engine.vcxproj.filters
@@ -48,6 +48,18 @@
     <ClInclude Include="..\code\headers\Entity.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="..\code\headers\Module_Factory.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\code\headers\Render_Module.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\code\headers\Render_Module_Factory.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\code\headers\Render_Component.hpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\code\sources\Window.cpp">
